--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,11 @@ p {
     text-align: center;
 }
 
+#featured-img {
+    width: 75%;
+    height: 55%;
+}
+
 #my-info {
     text-align: center;
 }
