--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,8 @@ p {
 }
 
 #featured-img {
-    width: 75%;
-    height: 55%;
+    width: 55%;
+    height: 45%;
 }
 
 #my-info {
@@ -65,6 +65,18 @@ p {
 .port-img {
     width: 90%;
     height: 70%;
+}
+
+#logo {
+    margin-top: 8%;
+    height: 80%;
+    width: 65%;
+}
+
+#jumbo-pic {
+    margin-top: 15%;
+    height: 80%;
+    width: 70%;
 }
 
 footer {
