--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@ p {
 }
 
 #featured {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; 
     text-align: center;
 }
 
@@ -79,9 +83,23 @@ p {
     width: 70%;
 }
 
+#jumbo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%; 
+}
+
 .icon {
     width: 55%;
     height: 45%;
+}
+
+.design {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 footer {
