--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,13 +53,15 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%; 
+    width: 75%; 
     text-align: center;
 }
 
 #featured-img {
-    width: 55%;
-    height: 45%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%; 
 }
 
 #my-info {
@@ -67,19 +69,23 @@ p {
 }
 
 .port-img {
-    width: 90%;
-    height: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
 }
 
 #logo {
-    margin-top: 8%;
-    height: 80%;
-    width: 65%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
 }
 
 #jumbo-pic {
-    margin-top: 15%;
-    height: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 70%;
 }
 
@@ -91,15 +97,24 @@ p {
 }
 
 .icon {
-    width: 55%;
-    height: 45%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%; 
 }
 
 .design {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
+}
+
+#button {
+    
+    margin-left: auto;
+    margin-right: auto;
+    width: 8%;
 }
 
 footer {
