--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-html {
-    background-color: #3B8686;
-}
-
 body {
     background-color: #9AC1C1;
     font-family: 'Montserrat', sans-serif;
@@ -32,28 +28,46 @@ p {
 .container {
     margin-top: 3px;
     margin-bottom: 3px;
-    padding: 1px;
 }
 
 .card {
     margin-top: 3px;
     margin-bottom: 3px;
-    padding: 1px;
 }
 
-.portfolio-content {
-    background-color: #3B8686;
+#port-cont {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
 }
 
-#projects {
-    text-align: center;
+#feat-cont {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%; 
+}
+
+#des-cont {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;  
+}
+
+#resume {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;  
 }
 
 #featured {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%; 
+    width: 90%; 
     text-align: center;
 }
 
@@ -61,7 +75,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%; 
+    width: 60%; 
 }
 
 #my-info {
@@ -93,7 +107,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%; 
+    width: 95%; 
 }
 
 .icon {
@@ -110,11 +124,10 @@ p {
     width: 60%;
 }
 
-#button {
-    
+#projects {
     margin-left: auto;
     margin-right: auto;
-    width: 8%;
+    width: 95%;
 }
 
 footer {
