--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,8 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;  
+    width: 80%;
+    text-align: center;
 }
 
 #featured {
@@ -101,13 +102,15 @@ p {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
+    text-align: center;
 }
 
 #jumbo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 95%; 
+    width: 95%;
+    text-align: center;
 }
 
 .icon {
@@ -128,6 +131,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     width: 95%;
+    text-align: center;
 }
 
 footer {
