--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    width: 80%;
 }
 
 #feat-cont {
@@ -61,7 +61,6 @@ p {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    text-align: center;
 }
 
 #featured {
@@ -80,6 +79,10 @@ p {
 }
 
 #my-info {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; 
     text-align: center;
 }
 
@@ -94,15 +97,15 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 68%;
 }
 
 #jumbo-pic {
     display: block;
-    margin-left: auto;
     margin-right: auto;
-    width: 70%;
-    text-align: center;
+    margin-left: 10%;
+    width: 55%;
+    margin-top: 8%;
 }
 
 #jumbo {
