--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 90%;
 }
 
 #featured {
@@ -82,7 +82,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%; 
+    width: 90%; 
     text-align: center;
 }
 
@@ -103,7 +103,7 @@ p {
 #jumbo-pic {
     display: block;
     margin-right: auto;
-    margin-left: 10%;
+    margin-left: auto;
     width: 55%;
     margin-top: 8%;
 }
