--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,15 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%; 
+    width: 80%; 
     text-align: center;
+}
+
+#contact-me-pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
 }
 
 .port-img {
@@ -91,13 +98,14 @@ p {
     margin-left: auto;
     margin-right: auto;
     width: 60%;
+    height: 75%;
 }
 
 #logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 68%;
+    width: 75%;
 }
 
 #jumbo-pic {
