--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ p {
     margin-right: auto;
     margin-top: 1px;
     margin-bottom: 1px;
-    width: 46%;
+    width: 34%;
 }
 
 #jumbo-pic {
@@ -154,7 +154,7 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1px;
+    margin-top: 5%;
     margin-bottom: 1px;
     width: 85%;
     text-align: center;
