--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,8 @@ h4, h5 {
 h6 {
     vertical-align: middle;
     margin-top: 15%;
-    margin-right: 30%;
+    margin-right: 20%;
+    margin-left: auto;
     color: #ECF1F2;
     text-decoration-style: solid;
     font-family: 'Titillium Web', sans-serif;
@@ -246,8 +247,9 @@ p.small { font-size: 16px; }
 }
 
 #jumbo-pic {
-    margin-left: 30%;
-    width: 80%;
+    margin-right: auto;
+    margin-left: 20%;
+    width: 70%;
     margin-top: 5%;
 }
 
